Add basic Pangoro files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       loadSidebar: true,
       homepage: 'index.md',
       alias: {
-        '/lixy/': '/lixy/index.md'
+        '/lixy/': '/lixy/index.md',
+        '/pangoro/': '/pangoro/index.md'
       },
       relativePath: true,
       subMaxLevel: 3
